--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "firebase": "^9.21.0",
     "next": "13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
