--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^9.21.0",
     "next": "13.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts":"^2.6.2"
   }
 }
