--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.58",
     "firebase": "^9.21.0",
     "next": "13.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.6.2"
   }
 }
